--- a/app/src/main/res/layout/activity_xrig_register.xml
+++ b/app/src/main/res/layout/activity_xrig_register.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient"
+    android:orientation="vertical"
     android:padding="30dp"
     tools:context=".XRiG_Register">
 
